@@ -6,7 +6,7 @@
  * Copyright (c) 1998-1999 by Scriptics Corporation.
  * All rights reserved.
  *
- * RCS: @(#) $Id: tclPlatDecls.h,v 1.37 2010/02/05 10:03:23 nijtmans Exp $
+ * RCS: @(#) $Id: tclPlatDecls.h,v 1.38 2010/04/15 13:58:44 nijtmans Exp $
  */
 
 #ifndef _TCLPLATDECLS
@@ -24,22 +24,10 @@
 #endif
 
 /*
- *  Pull in the typedef of TCHAR for windows.
+ * WARNING: This file is automatically generated by the tools/genStubs.tcl
+ * script.  Any modifications to the function declarations below should be made
+ * in the generic/tcl.decls script.
  */
-#if defined(__CYGWIN__)
-    typedef char TCHAR;
-#elif defined(__WIN32__) && !defined(_TCHAR_DEFINED)
-#   include <tchar.h>
-#   ifndef _TCHAR_DEFINED
-	/* Borland seems to forget to set this. */
-        typedef _TCHAR TCHAR;
-#	define _TCHAR_DEFINED
-#   endif
-#   if defined(_MSC_VER) && defined(__STDC__)
-	/* MSVC++ misses this. */
-	typedef _TCHAR TCHAR;
-#   endif
-#endif
 
 /* !BEGIN!: Do not edit below this line. */
 
